--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "autoprefixer": "^10.2.4",
+    "gatsby-plugin-postcss": "^3.7.0",
+    "postcss": "^8.2.6",
+    "prettier": "2.2.1",
+    "tailwindcss": "^2.0.3"
   },
   "keywords": [
     "gatsby"
